More fixes
- Fixed my SCSS code for header
- Fixed the spacing between the words in the navbar buttons as it was a bit too much
- Fixed the font-family and size of the navbar
- Fixed the size of the buttons in the header. They were a little bit too big. Also increased the width of the search input as it was a bit too small
- Fixed the hero-image font
- Fixed the fonts of the website as I have missed that previously
- Fixed the spacing between the title and the dash in the cards

--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -482,4 +482,5 @@
 	padding-top: 1rem;
 	font-size: 1.2rem;
 	padding-left: 0;
+	margin-bottom: 0;
 }
