--- a/scss/_culture.scss
+++ b/scss/_culture.scss
@@ -59,6 +59,6 @@ h2 {
 .brand-text {
 	@media only screen and (min-width: $break-xl) {
 		max-width: 35rem;
-
+		font-size: 16px;
 	}
 }
