--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,7 @@ body {
     font-size: 1rem;
 		font-weight: 400;
     //font-family: Lato,Helvetica,Arial,sans-serif;
+    font-family: "Poppins", "Helvetica", "Arial", sans-serif;
     @media screen and (-ms-high-contrast: none) {
     font-family: Lato,Helvetica,Arial,sans-serif;
     }
